--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.15 【今日阅读】https://interjectedfuture.com/destroyed-at-the-boundary/ Shared mutable state invites complexity into our programs. Programming languages help with this complexity inside a program, but not across network boundaries between programs.
+
 4.14 【今日阅读】https://bytebase.com/blog/what-is-database-schema-drift Database schema drift or just schema drift is the case where the actual schema in the live database (the actual state) is different from the source of truth (the desired state).
 
 4.13 【今日阅读】https://htmx.org/essays/locality-of-behaviour/ The primary feature for easy maintenance is locality: Locality is that characteristic of source code that enables a programmer to understand that source by looking at only a small portion of it.
