--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.17 【今日阅读】https://developers.redhat.com/articles/2022/04/12/state-static-analysis-gcc-12-compiler So for GCC 12, I've implemented enough support for inline assembly for the analyzer to handle cases like this. I don't attempt to actually parse and interpret the assembly code; I just needed to add enough heuristics to recognize that the result of the inline assembler isn't going to change between the two calls to array_index_mask_nospec. With this enhancement, the analyzer is able to figure out that the result from wdev_to_wvif is the same both times, fixing the false positive the analyzer had previously returned.
+
 4.16 【今日阅读】https://github.com/racket/racket/pull/4179 Running make currently triggers a Rube-Goldberg-style contraption: makefiles that run scripts that generate twisty sets of makefile macros that trick make into running compilers and other makefiles and... It's fragile, difficult update, and everything has to be done twice to cover Unix and Windows. See also Non-recursive Make Considered Harmful: Build Systems at Scale; our makefiles don't currently include $$$$, but probably because I've found only worse ways to do things.
 
 4.15 【今日阅读】https://interjectedfuture.com/destroyed-at-the-boundary/ Shared mutable state invites complexity into our programs. Programming languages help with this complexity inside a program, but not across network boundaries between programs.
