--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.20 【今日阅读】https://dev.to/brentmitchell/after-5-years-im-out-of-the-serverless-compute-cult-3f6d After 5 years, I'm out of the serverless compute cult
+
 4.19 【今日阅读】https://caseymuratori.com/blog_0015 I look at programming as having essentially two parts: figuring out what the processor actually needs to do to get something done, and then figuring out the most efficient way to express that in the language I’m using.
 
 4.18 【今日阅读】http://www.covingtoninnovations.com/mc/WriteThinkLearn.pdf How to Write More Clearly, Think More Clearly, and
