--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.22 【今日阅读】https://www.infoq.com/articles/implementations-patterns-br/ Local consequences; Minimize repetition; Logic and Data together; Symmetry; Declarative Expression; Rate of Change
+
 4.21 【今日阅读】https://adamwathan.me/css-utility-classes-and-separation-of-concerns/ Taking a component-first approach to CSS means you create components for things even if they will never get reused. This premature abstraction is the source of a lot of bloat and complexity in stylesheets. Take a navbar for example. How many times in your app do you rewrite the markup for your main nav?
 
 4.20 【今日阅读】https://dev.to/brentmitchell/after-5-years-im-out-of-the-serverless-compute-cult-3f6d After 5 years, I'm out of the serverless compute cult
