--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.23 【今日阅读】https://dev.to/taowen/what-makes-code-slow-to-execute-1d6j where code executes matters
+
 4.22 【今日阅读】https://www.infoq.com/articles/implementations-patterns-br/ Local consequences; Minimize repetition; Logic and Data together; Symmetry; Declarative Expression; Rate of Change
 
 4.21 【今日阅读】https://adamwathan.me/css-utility-classes-and-separation-of-concerns/ Taking a component-first approach to CSS means you create components for things even if they will never get reused. This premature abstraction is the source of a lot of bloat and complexity in stylesheets. Take a navbar for example. How many times in your app do you rewrite the markup for your main nav?
