--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.25 【今日阅读】https://jmmv.dev/2022/04/rust-traits-and-dependency-injection.html Rust traits and dependency injection
+
 4.24 【今日阅读】https://www.cybertec-postgresql.com/en/pg_rewrite-postgresql-table-partitioning/ pg_rewrite is a good method to turn existing tables into PostgreSQL partitions. It only needs a short lock, which makes it superior to the long and extensive table locking needed by the PostgreSQL core.
 
 4.23 【今日阅读】https://dev.to/taowen/what-makes-code-slow-to-execute-1d6j where code executes matters
