--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+4.26 【今日阅读】https://lobste.rs/s/en6d6k/inventing_postscript_tech_took_pain_out The real value of something like PostScript or PDF is not for communicating with a printer, it’s for communicating with a publisher. Being able to serialise your printable output in a (relatively) small file that does not include any printer-specific details (e.g. exactly what the right dithering patterns should be to avoid smudging on this technology, what the exact mix of ink colours is), is a huge win. You wouldn’t want to send every page as a fully rasterised image, because it would be huge and because rasterisation bakes in printer-specific details.
+
+HP’s big innovation in this space was to realise that these were separate languages. PCL was a far better language for computer-printer communication than PostScript and let HP ship printers with far slower CPUs and less RAM than competitors that spoke PostScript natively. At the same time, nothing stopped your print server ( a dedicated machine or a process on the host) from accepting PostScript and converting it to PCL.****
+
 4.25 【今日阅读】https://jmmv.dev/2022/04/rust-traits-and-dependency-injection.html Rust traits and dependency injection
 
 4.24 【今日阅读】https://www.cybertec-postgresql.com/en/pg_rewrite-postgresql-table-partitioning/ pg_rewrite is a good method to turn existing tables into PostgreSQL partitions. It only needs a short lock, which makes it superior to the long and extensive table locking needed by the PostgreSQL core.
