--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.28 【今日阅读】https://news.ycombinator.com/item?id=31176910 回忆早年的web开发
+
 4.27 【今日阅读】https://vkcom.github.io/kphp/various-topics/type-inferring-examples.html kphp: php type inference
 
 4.26 【今日阅读】https://lobste.rs/s/en6d6k/inventing_postscript_tech_took_pain_out The real value of something like PostScript or PDF is not for communicating with a printer, it’s for communicating with a publisher. Being able to serialise your printable output in a (relatively) small file that does not include any printer-specific details (e.g. exactly what the right dithering patterns should be to avoid smudging on this technology, what the exact mix of ink colours is), is a huge win. You wouldn’t want to send every page as a fully rasterised image, because it would be huge and because rasterisation bakes in printer-specific details.
