--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.1 【今日阅读】https://flameeyes.blog/2022/04/26/engineering-jargon-yaks/ if not "Yak shaving", what you should do instead.
+
 4.30 【今日阅读】https://time.geekbang.org/column/article/513599 观察到一个现象就是教你重构教你单元测试的教程一般都是读操作。写操作怎么弄？怎么把写操作转换成更易于测试的读操作？
 
 4.29 【今日阅读】https://mp.weixin.qq.com/s/7VlXBl9syw2ppiR3x237bA 基于已有组件，组装集成环节做的事情就是选择需要的组件，填充配置，一旦组装结果被保存之后，即完成系统的集成，不再需要构件和部署。填充好配置就可以发布了，系统运行时，多个产品功能在运行时候共享一套组件实例，差别在于执行组件的组合和配置不同。这一点是通过前文提到过的业务身份来实现的，不同业务身份关联不同的组件组装DSL及组件用户配置，最终实现差异化功能组装和执行。
