--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.2 【今日阅读】https://linearb.io/dora-metrics/ LinearB is a free tool that integrates with your Git and project management system to provide team and organization level DORA metrics within minutes.
+
 5.1 【今日阅读】https://flameeyes.blog/2022/04/26/engineering-jargon-yaks/ if not "Yak shaving", what you should do instead.
 
 4.30 【今日阅读】https://time.geekbang.org/column/article/513599 观察到一个现象就是教你重构教你单元测试的教程一般都是读操作。写操作怎么弄？怎么把写操作转换成更易于测试的读操作？
