--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+5.3 【今日阅读】https://commaok.xyz/post/perf_files/ Linus’s Famous Law: “Given enough eyeballs, all bugs are shallow.”
+Linus’s Less Famous Law: “Files grow.”
+
 5.2 【今日阅读】https://linearb.io/dora-metrics/ LinearB is a free tool that integrates with your Git and project management system to provide team and organization level DORA metrics within minutes.
 
 5.1 【今日阅读】https://flameeyes.blog/2022/04/26/engineering-jargon-yaks/ if not "Yak shaving", what you should do instead.
