--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.4 【今日阅读】https://quanttype.net/posts/2022-05-02-schema-migrations.html Schema migrations and avoiding downtime
+
 5.3 【今日阅读】https://commaok.xyz/post/perf_files/ Linus’s Famous Law: “Given enough eyeballs, all bugs are shallow.”
 Linus’s Less Famous Law: “Files grow.”
 
