--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.6 【今日阅读】https://github.com/taowen/vite-howto It is about how to split application into files/packages, how to use TypeScript to ensure compatibility, how to use Vite to link them back (either statically or dynamically).
+
 5.5 【今日阅读】https://zhuanlan.zhihu.com/p/508877002 架构设计-复用是邪恶的
 
 5.4 【今日阅读】https://quanttype.net/posts/2022-05-02-schema-migrations.html Schema migrations and avoiding downtime
