--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.7 【今日阅读】https://www.maguangguang.xyz/bff-governance 这是在BFF暴露给前端的接口，实现过程中需要调用后端10+个服务，进行几十次的服务间调用。在这几十次服务间调用过程中，有大量的读操作，以及近10次的跨服务写操作，读操作主要为了满足写操作的数据组装要求。
+
 5.6 【今日阅读】https://github.com/taowen/vite-howto It is about how to split application into files/packages, how to use TypeScript to ensure compatibility, how to use Vite to link them back (either statically or dynamically).
 
 5.5 【今日阅读】https://zhuanlan.zhihu.com/p/508877002 架构设计-复用是邪恶的
