--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.9 【今日阅读】https://erikbern.com/2022/04/05/sigma-driven-project-management-when-is-the-optimal-time-to-give-up.html So where does the σ come from? My thesis for this blog post is that σ is an inherent property of the type of risk you have in your project portfolio, and that different values for σ warrants very different types of project management. Low σ means low uncertainty and means we should almost always finish projects. High σ means high uncertainty — more like a research lab — and means large risks of a huge blowup, which also means we should abandon lots of projects.
+
 5.8 【今日阅读】https://zhuanlan.zhihu.com/p/507150586 市面上大部分数据仓库都需要用户在建表时指定分区字段，预先判断数据的分布情况，这无疑加重了用户的使用负担，如果查询模式跟分区无关，做查询优化则非常困难，Auto Clustering 则很好的解决了这些问题。
 
 5.7 【今日阅读】https://www.maguangguang.xyz/bff-governance 这是在BFF暴露给前端的接口，实现过程中需要调用后端10+个服务，进行几十次的服务间调用。在这几十次服务间调用过程中，有大量的读操作，以及近10次的跨服务写操作，读操作主要为了满足写操作的数据组装要求。
