--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.12 【今日阅读】https://lobste.rs/s/jrolak/announcing_d1_our_first_sql_database Litestream author here. I think SQLite has trended recently because more folks are trying to push data to the edge and it can be difficult & expensive to do with traditional client/server databases.
+
 5.11 【今日阅读】https://craftofcoding.wordpress.com/2022/03/28/ever-wondered-why-goto-is-considered-harmful/ The flowchart on the left has 72 unique paths. The flowchart on the right with the dotted line signifying an unstructured jump has 93,748,416,840 unique paths
 
 5.10 【今日阅读】https://doriantaylor.com/the-symbol-management-problem In software, and especially in Web development, you will find yourself dealing with a number of symbols, tokens, slugs—identifiers intended to pick out, demarcate, and differentiate different pieces of content for different kinds of processing
