--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+5.15 【今日阅读】https://blog.logrocket.com/comparing-rust-supply-chain-safety-tools/ Comparing Rust supply chain safety tools
+
+5.14 【今日阅读】https://onlinelibrary.wiley.com/doi/10.1002/spe.2874 Forges are online collaborative platforms to support the development of distributed open source software. While once mighty keepers of open source vitality, software forges are rapidly becoming less and less relevant.
+
 5.13 【今日阅读】https://en.wikipedia.org/wiki/Temporal_database A challenging issue is the support of temporal queries in a transaction time database under evolving schema. In order to achieve perfect archival quality it is of key importance to store the data under the schema version under which they first appeared. However, even the most simple temporal query rewriting the history of an attribute value would be required to be manually rewritten under each of the schema versions, potentially hundreds as in the case of MediaWiki [1]. This process would be particularly taxing for users. A proposed solution is to provide automatic query rewriting,[7][8] although this is not part of SQL or similar standards.
 
 5.12 【今日阅读】https://lobste.rs/s/jrolak/announcing_d1_our_first_sql_database Litestream author here. I think SQLite has trended recently because more folks are trying to push data to the edge and it can be difficult & expensive to do with traditional client/server databases.
