--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.16 【今日阅读】https://medium.com/airtable-eng/stateful-model-based-database-fuzzing-eacffb4d7337 Appendix: An obscure bug found by the fuzzer, Here is an example bug that our fuzzer found. You don’t need to understand all the details — we mainly think it’s important to focus on the complexity of the situation.
+
 5.15 【今日阅读】https://blog.logrocket.com/comparing-rust-supply-chain-safety-tools/ Comparing Rust supply chain safety tools
 
 5.14 【今日阅读】https://onlinelibrary.wiley.com/doi/10.1002/spe.2874 Forges are online collaborative platforms to support the development of distributed open source software. While once mighty keepers of open source vitality, software forges are rapidly becoming less and less relevant.
