--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.18 【今日阅读】https://en.wikipedia.org/wiki/Expression_problem The expression problem is a challenge problem in programming languages that concerns the extensibility and modularity of statically typed data abstractions. The goal is to define a data abstraction that is extensible both in its representations and its behaviors, where one can add new representations and new behaviors to the data abstraction, without recompiling existing code, and while retaining static type safety (e.g., no casts). It exposed deficiencies in programming paradigms and programming languages, and it is still not definitively solved, although there are many proposed solutions.
+
 5.17 【今日阅读】https://mp.weixin.qq.com/s/OrekHmMrn8UlisTrvt3MNA 实际构建的项目 = 改动项目 + 改动项目的 Dependencies + Dependencies 的依赖 + 改动项目的 Dependents + Dependents 的依赖
 
 5.16 【今日阅读】https://medium.com/airtable-eng/stateful-model-based-database-fuzzing-eacffb4d7337 Appendix: An obscure bug found by the fuzzer, Here is an example bug that our fuzzer found. You don’t need to understand all the details — we mainly think it’s important to focus on the complexity of the situation.
