--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.20 【今日阅读】https://www.datadoghq.com/blog/engineering/introducing-husky/ The concepts of shards and replicas have mostly disappeared from the system. In addition, we make no distinction between “historical” data and “fresh” data anywhere in the architecture.
+
 5.19 【今日阅读】https://zhuanlan.zhihu.com/p/515247384 https://juejin.cn/post/7044054733186662407 奥创实际上就是，由后端告诉前端如何去渲染；将页面组件化，每种组件具有相应的职责；具有组件可复用的能力的前后端统一的交互方式。
 
 5.18 【今日阅读】https://en.wikipedia.org/wiki/Expression_problem The expression problem is a challenge problem in programming languages that concerns the extensibility and modularity of statically typed data abstractions. The goal is to define a data abstraction that is extensible both in its representations and its behaviors, where one can add new representations and new behaviors to the data abstraction, without recompiling existing code, and while retaining static type safety (e.g., no casts). It exposed deficiencies in programming paradigms and programming languages, and it is still not definitively solved, although there are many proposed solutions.
