--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.21 【今日阅读】https://justine.lol/ftrace/ One of my favorite features of the Cosmopolitan Libc runtime is its --ftrace flag that logs C function calls. The Cosmopolitan Libc _start() function starts by intercepting the --ftrace flag. If it exists, then it opens and sorts of the symbol table from the elf binary. Then it changes the protection of memory so it's able to iterate over the program's memory to look for nop instructions it can mutate.
+
 5.20 【今日阅读】https://www.datadoghq.com/blog/engineering/introducing-husky/ The concepts of shards and replicas have mostly disappeared from the system. In addition, we make no distinction between “historical” data and “fresh” data anywhere in the architecture.
 
 5.19 【今日阅读】https://zhuanlan.zhihu.com/p/515247384 https://juejin.cn/post/7044054733186662407 奥创实际上就是，由后端告诉前端如何去渲染；将页面组件化，每种组件具有相应的职责；具有组件可复用的能力的前后端统一的交互方式。
