--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.22 【今日阅读】https://www.reddit.com/r/programming/comments/uu5a5k/why_building_software_takes_time/ Why building software takes time
+
 5.21 【今日阅读】https://justine.lol/ftrace/ One of my favorite features of the Cosmopolitan Libc runtime is its --ftrace flag that logs C function calls. The Cosmopolitan Libc _start() function starts by intercepting the --ftrace flag. If it exists, then it opens and sorts of the symbol table from the elf binary. Then it changes the protection of memory so it's able to iterate over the program's memory to look for nop instructions it can mutate.
 
 5.20 【今日阅读】https://www.datadoghq.com/blog/engineering/introducing-husky/ The concepts of shards and replicas have mostly disappeared from the system. In addition, we make no distinction between “historical” data and “fresh” data anywhere in the architecture.
