--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.24 【今日阅读】https://www.youtube.com/watch?v=Dq2ftPf3sn4 Add Nx to an Existing Monorepo https://nx.dev/configuration/projectjson Projects can be configured in package.json
+
 5.23 【今日阅读】https://neverworkintheory.org/ It might work in practice, but it will never work in theory. People have been building complex software for over sixty years, but until recently, only a handful of researchers had studied how it was actually done. Many people had opinions—often very strong ones—but most of these were based on personal anecdotes or the kind of "it's obvious" reasoning that led Aristotle to conclude that heavy objects fall faster than light ones.
 
 5.22 【今日阅读】https://www.reddit.com/r/programming/comments/uu5a5k/why_building_software_takes_time/ Why building software takes time
