--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.26 【今日阅读】https://understandlegacycode.com/blog/key-points-of-legacy-code-programmer-toolbox/ The key points of The Legacy Code Programmer's Toolbox
+
 5.25 【今日阅读】https://markus.oberlehner.net/blog/refactoring-a-house-software-architecture-is-architecture-after-all/ First misconception: changing software is cheap; Second misconception: buildings are static;
 
 5.24 【今日阅读】https://www.youtube.com/watch?v=Dq2ftPf3sn4 Add Nx to an Existing Monorepo https://nx.dev/configuration/projectjson Projects can be configured in package.json
