--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.27 【今日阅读】https://news.ycombinator.com/item?id=31515938 Spark is not a database, certainly not an RDBMS. A big distributed database/storage layer into which I can write queries in my chosen language... The author seems to be suggesting that Databricks/Snowflake are selling "storage", "language integration", and "a better Postgres", which is like saying that Toyota sells an air conditioner, entertainment unit, and leather chairs. Technically right... but missing the car for the parts.
+
 5.26 【今日阅读】https://understandlegacycode.com/blog/key-points-of-legacy-code-programmer-toolbox/ The key points of The Legacy Code Programmer's Toolbox
 
 5.25 【今日阅读】https://markus.oberlehner.net/blog/refactoring-a-house-software-architecture-is-architecture-after-all/ First misconception: changing software is cheap; Second misconception: buildings are static;
