--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.28 【今日阅读】https://www.youtube.com/watch?v=kPbRDn5Fg0Y 过去一个 highcharts 组件要同时负责 svg格式化，dom操作，字体颜色，动画效果。现在可以把每个侧面的拆开来提供可复用的lib，d3只负责svg，react只负责dom，tailwind只负责字体颜色，framer-motion只负责动画，各司其职。最终写出来的声明式的代码 Diff from "Building an Animated Line Chart with d3, React and Framer Motion" https://www.youtube.com 就等同于给 highcharts 传递的 options。
+
 5.27 【今日阅读】https://news.ycombinator.com/item?id=31515938 Spark is not a database, certainly not an RDBMS. A big distributed database/storage layer into which I can write queries in my chosen language... The author seems to be suggesting that Databricks/Snowflake are selling "storage", "language integration", and "a better Postgres", which is like saying that Toyota sells an air conditioner, entertainment unit, and leather chairs. Technically right... but missing the car for the parts.
 
 5.26 【今日阅读】https://understandlegacycode.com/blog/key-points-of-legacy-code-programmer-toolbox/ The key points of The Legacy Code Programmer's Toolbox
