--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.30 【今日阅读】https://thevaluable.dev/tags/complexity/ Measuring Software Complexity
+
 5.29 【今日阅读】https://www.notboring.co/p/apis-all-the-way-down by one estimate, even before the pandemic, Stripe was generating $350 million in revenue from Shopify alone -- and that Shopify would inevitably get sick of paying Stripe and build their own payments solutions.
 
 5.28 【今日阅读】https://www.youtube.com/watch?v=kPbRDn5Fg0Y 过去一个 highcharts 组件要同时负责 svg格式化，dom操作，字体颜色，动画效果。现在可以把每个侧面的拆开来提供可复用的lib，d3只负责svg，react只负责dom，tailwind只负责字体颜色，framer-motion只负责动画，各司其职。最终写出来的声明式的代码 Diff from "Building an Animated Line Chart with d3, React and Framer Motion" https://www.youtube.com 就等同于给 highcharts 传递的 options。
