--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.31 【今日阅读】https://semgrep.dev/docs/writing-rules/pattern-examples/ Semgrep is an open-source tool with a simple syntax for writing rules: if you can write code, you can write a Semgrep rule — no program analysis PhD required! To our knowledge, the only other tool with the explicit goal of allowing custom rules is GitHub’s proprietary tool, CodeQL. https://semgrep.dev/r
+
 5.30 【今日阅读】https://thevaluable.dev/tags/complexity/ Measuring Software Complexity
 
 5.29 【今日阅读】https://www.notboring.co/p/apis-all-the-way-down by one estimate, even before the pandemic, Stripe was generating $350 million in revenue from Shopify alone -- and that Shopify would inevitably get sick of paying Stripe and build their own payments solutions.
