--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.4 【今日阅读】http://bitsquid.blogspot.com/2011/01/managing-coupling.html Ideally, each system should be completely isolated. The effect system should be the only system manipulating effects and it shouldn’t do anything else. It should have its own update() call just for updating effects. No other system should care how the effects are stored in memory or what parts of the update happen on the CPU, SPU or GPU. A new programmer wanting to understand the system should only have to look at the files in the effect_system directory. It should be possible to optimize, rewrite or drop the entire system without affecting any other code.  http://bitsquid.blogspot.com/2011/09/managing-decoupling-part-4-id-lookup.html  using IDs to refer to objects owned by other systems
+
 6.3 【今日阅读】https://motion.dev/guides/performance 基于 state 的分层解耦合。你对浏览器 DOM 不同属性的读或者写（https://csstriggers.com/），对于你来说都是普通的数据结构改动，但是引起的浏览器侧的重计算是完全不同的。浏览器通过 DOM 这么一层 state 把 computation 进行了解耦合。可以理解为每个 DOM property 名相当于 kafka 的 topic，你对 DOM 属性的操作，会往对应的 kafka topic 投递消息，不同的后续计算是订阅这个 topic 来触发的。
 
 6.2 【今日阅读】https://clivethompson.medium.com/programming-isnt-hard-but-it-s-frustrating-6cb740085243 A very high tolerance for daily, grinding frustration. That’s because most programming isn’t so much creating code as debugging it. You write a function, you test it, and — very often — it doesn’t work. when you’re stuck on a coding problem, it feels much more like a deeply personal failure: My inability to follow a logical sequence through.
