--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,13 @@
+6.10 【今日阅读】https://nolanlawson.com/2022/06/09/the-collapse-of-complex-software/ One thing working in complexity’s favor, though, is that engineers like complexity. Admit it: as much as we complain about other people’s complexity, we love our own. We love sitting around and dreaming up new architectural diagrams that can comfortably sit inside our own heads
+
+6.9 【今日阅读】https://zhuanlan.zhihu.com/p/526164614 单向数据流最让人迷恋的地方在于减少需要程序员手工管理的 mutable state 的个数。vdom，计算属性和effect 有的时候还是重算太多了。使得我们无法实现“真正的”单向数据流。还有第四种方案，标脏。以及第五种方案，暴力重算。
+
+6.8 【今日阅读】https://eli.thegreenplace.net/2022/performance-of-coroutine-style-lexers-in-go/ Back in 2011, Rob Pike gave a talk on the topic of Lexical Scanning in Go, where he presented an interesting approach to lexical analysis with coroutines (implemented via goroutines communicating over a channel). Since I've been pondering the connection between coroutines and state machines in the past, Rob's talk inspired me to try approximating this approach in Python using sub-generators.
+
+6.7 【今日阅读】http://gameprogrammingpatterns.com/component.html  Any programmer trying to make a change in code like that will need to know something about physics, graphics, and sound just to make sure they don’t break anything.
+
+6.6 【今日阅读】https://fasterthanli.me/articles/the-curse-of-strong-typing The curse of strong typing
+
 6.5 【今日阅读】https://zhuanlan.zhihu.com/p/524164859 状态同步的模式
 
 6.4 【今日阅读】http://bitsquid.blogspot.com/2011/01/managing-coupling.html Ideally, each system should be completely isolated. The effect system should be the only system manipulating effects and it shouldn’t do anything else. It should have its own update() call just for updating effects. No other system should care how the effects are stored in memory or what parts of the update happen on the CPU, SPU or GPU. A new programmer wanting to understand the system should only have to look at the files in the effect_system directory. It should be possible to optimize, rewrite or drop the entire system without affecting any other code.  http://bitsquid.blogspot.com/2011/09/managing-decoupling-part-4-id-lookup.html  using IDs to refer to objects owned by other systems
