--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.11 【今日阅读】https://blog.ecosta.dev/en/tech/cpp-modules-with-clang this article showed how to use C++ modules with Clang, and data for this simple test shows the main benefit of them: the pre-compilation of <iostream> inside M3 only impacts M3 itself. Consumers of it are only positively impacted: M3C takes 6x less to compile, when compared to M3, and it can inline usages of "std::cerr" with minimal penalty.
+
 6.10 【今日阅读】https://nolanlawson.com/2022/06/09/the-collapse-of-complex-software/ One thing working in complexity’s favor, though, is that engineers like complexity. Admit it: as much as we complain about other people’s complexity, we love our own. We love sitting around and dreaming up new architectural diagrams that can comfortably sit inside our own heads
 
 6.9 【今日阅读】https://zhuanlan.zhihu.com/p/526164614 单向数据流最让人迷恋的地方在于减少需要程序员手工管理的 mutable state 的个数。vdom，计算属性和effect 有的时候还是重算太多了。使得我们无法实现“真正的”单向数据流。还有第四种方案，标脏。以及第五种方案，暴力重算。
