--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.13 【今日阅读】https://thevaluable.dev/cohesion-coupling-guide-examples/ Cohesion and Coupling in Software with Examples
+
 6.12 【今日阅读】https://www.youtube.com/watch?v=xOsmO4Gnj6c 1. Find a stronghold 2. Analyse stack 3. Start from I/O 4. Decoupling 5. Padded-room
 
 6.11 【今日阅读】https://blog.ecosta.dev/en/tech/cpp-modules-with-clang this article showed how to use C++ modules with Clang, and data for this simple test shows the main benefit of them: the pre-compilation of <iostream> inside M3 only impacts M3 itself. Consumers of it are only positively impacted: M3C takes 6x less to compile, when compared to M3, and it can inline usages of "std::cerr" with minimal penalty.
