--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.14 【今日阅读】https://mp.weixin.qq.com/s/RnYJ-hyA2NHaVPlDoY_kZg “部门间竞争太激烈，资源不共享，资源浪费严重。”一位大厂员工在脉脉上吐槽，“不断在上一个项目上重复造轮子，输了之后换下一波人，轮子太多，车不够用。”
+
 6.13 【今日阅读】https://thevaluable.dev/cohesion-coupling-guide-examples/ Cohesion and Coupling in Software with Examples
 
 6.12 【今日阅读】https://www.youtube.com/watch?v=xOsmO4Gnj6c 1. Find a stronghold 2. Analyse stack 3. Start from I/O 4. Decoupling 5. Padded-room
