--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.16 【今日阅读】https://acko.net/blog/on-variance-and-extensibility/ Making code reusable is not an art, it's a job
+
 6.15 【今日阅读】https://blog.ploeh.dk/2022/06/13/some-thoughts-on-naming-tests/ If the name and test code disagree, which one is right?
 
 6.14 【今日阅读】https://mp.weixin.qq.com/s/RnYJ-hyA2NHaVPlDoY_kZg “部门间竞争太激烈，资源不共享，资源浪费严重。”一位大厂员工在脉脉上吐槽，“不断在上一个项目上重复造轮子，输了之后换下一波人，轮子太多，车不够用。”
