--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,8 @@
+6.18 【今日阅读】https://textslashplain.com/2022/05/18/thoughts-on-impact/ We try to break impact down into three rings: 1) Your own accomplishments, 2) How you built upon the ideas/work of others, and 3) How you contributed to others’ impact. The value of #1 and #3 is pretty obvious, but #2 is just as important– Microsoft now strives to act as “One Microsoft”. This represents a significant improvement over what was once described to prospective employees as “A set of competing fiefdoms, perpetually at war” and drawn eloquently by Manu Cornet
+
+6.17 【今日阅读】https://github.com/Re-engineering-Domain-Driven-Design/Accounting/blob/main/README.zh-cn.md 
+Re-engineering Domain Driven Design
+
 6.16 【今日阅读】https://acko.net/blog/on-variance-and-extensibility/ Making code reusable is not an art, it's a job
 
 6.15 【今日阅读】https://blog.ploeh.dk/2022/06/13/some-thoughts-on-naming-tests/ If the name and test code disagree, which one is right?
