--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.20 【今日阅读】https://lobste.rs/s/eahdc8/dora_metrics_right_answer_measuring The language choices here reflect what I see across the industry. The term “high-performing” is especially pervasive. Whenever I dig into what people mean by this it usually means “hits management’s projections” or in the most general cases “ships often”. The causality is rarely stated.
+
 6.19 【今日阅读】https://betterprogramming.pub/object-oriented-programming-the-trillion-dollar-disaster-92a4b666c7c7 OOP makes the problem of code organization even worse by scattering state all over the program. The scattered state is then shared promiscuously between various objects.
 
 6.18 【今日阅读】https://textslashplain.com/2022/05/18/thoughts-on-impact/ We try to break impact down into three rings: 1) Your own accomplishments, 2) How you built upon the ideas/work of others, and 3) How you contributed to others’ impact. The value of #1 and #3 is pretty obvious, but #2 is just as important– Microsoft now strives to act as “One Microsoft”. This represents a significant improvement over what was once described to prospective employees as “A set of competing fiefdoms, perpetually at war” and drawn eloquently by Manu Cornet
