--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.22 【今日阅读】https://www.youtube.com/watch?v=4YTfxresvS8 Raph Levien presented an overview of his new framework for creating a GUI in Rust. He uses data oriented design principles and ideas derived from entity component systems in order to create a native-looking GUI for Xi Editor. This talk explores this approach as well as potential alternatives and discusses the pros and cons of each.
+
 6.21 【今日阅读】https://www.tonymarston.net/php-mysql/dependency-injection-is-evil.html A common reason people give for preferring dependency injection is that it makes testing easier. The point here is that to do testing, you need to easily replace real service implementations with stubs or mocks. However there is really no difference here between dependency injection and service locator: both are very amenable to stubbing. I suspect this observation comes from projects where people don't make the effort to ensure that their service locator can be easily substituted. This is where continual testing helps, if you can't easily stub services for testing, then this implies a serious problem with your design.
 
 6.20 【今日阅读】https://lobste.rs/s/eahdc8/dora_metrics_right_answer_measuring The language choices here reflect what I see across the industry. The term “high-performing” is especially pervasive. Whenever I dig into what people mean by this it usually means “hits management’s projections” or in the most general cases “ships often”. The causality is rarely stated.
