--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.26 【今日阅读】https://lobste.rs/s/phqsxk/hay_ain_t_yaml_custom_languages_for_unix innovations in this space of interleaving code and data in interesing new ways
+
 6.25 【今日阅读】http://journal.stuffwithstuff.com/2016/06/16/long-names-are-long/ I believe that naming things is one of the most fundamental tasks we do when programming. Names are the structure we impose on the formless sea of bits that is computing.
 
 6.24 【今日阅读】https://benjamincongdon.me/blog/2022/06/22/Mental-Model-Difficult-Problems-vs.-Hard-Work/  there are problems that are solvable by throwing a lot of human-hours at it (“Hard Work”), and problems that are not a function of raw work hours, but rather require dealing with ambiguity (“Difficult Problems”).
