--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.27 【今日阅读】https://roman.pt/posts/dont-let-dicts-spoil-your-code/ Keep an eye on your dicts. Don’t let them take control of your application. As with every piece of technical debt, the further you postpone introducing proper data structures, the more complex the transition becomes.
+
 6.26 【今日阅读】https://lobste.rs/s/phqsxk/hay_ain_t_yaml_custom_languages_for_unix innovations in this space of interleaving code and data in interesing new ways
 
 6.25 【今日阅读】http://journal.stuffwithstuff.com/2016/06/16/long-names-are-long/ I believe that naming things is one of the most fundamental tasks we do when programming. Names are the structure we impose on the formless sea of bits that is computing.
