--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.29 【今日阅读】https://mike.cloud/tech%20industry/2022/06/24/autonomous-teams.html If you keep an eye on German automotive companies, you will see a pattern. Their software is a huge mess and they have trouble finding and keeping developers, which leads to a high turnover rate, that amplifies existing issues.
+
 6.28 【今日阅读】https://acko.net/blog/react-the-missing-parts/ No-hooks and Early Return，Component Morphing，useMemo vs useEffect + setState，and some wild Yeet-Reduce results
 
 6.27 【今日阅读】https://roman.pt/posts/dont-let-dicts-spoil-your-code/ Keep an eye on your dicts. Don’t let them take control of your application. As with every piece of technical debt, the further you postpone introducing proper data structures, the more complex the transition becomes.
