--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.30 【今日阅读】https://www.foonathan.net/2022/06/cmake-fetchcontent/#content FetchContent is a really convenient way of managing dependencies. But you as a library authors can do a couple of things to make it even easier for the end user: Only define minimal targets when the project is included as a subdirectory. Provide minimal zipped archive of sources that users can download instead of the entire repository. Use GitHub actions to automatically create the archive for each release.
+
 6.29 【今日阅读】https://mike.cloud/tech%20industry/2022/06/24/autonomous-teams.html If you keep an eye on German automotive companies, you will see a pattern. Their software is a huge mess and they have trouble finding and keeping developers, which leads to a high turnover rate, that amplifies existing issues.
 
 6.28 【今日阅读】https://acko.net/blog/react-the-missing-parts/ No-hooks and Early Return，Component Morphing，useMemo vs useEffect + setState，and some wild Yeet-Reduce results
