--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.2 【今日阅读】http://axisofeval.blogspot.com/2011/04/whats-condition-system-and-why-do-you.html What's a condition system and why do you want one?
+
 7.1 【今日阅读】https://webglfundamentals.org/webgl/lessons/webgl-scene-graph.html If you move the earth the moon will move with it. If you move a galaxy all the stars inside will move with it.  Model the rule of "state dependency" (a.k.a Newton's law of motion).
 
 6.30 【今日阅读】https://www.foonathan.net/2022/06/cmake-fetchcontent/#content FetchContent is a really convenient way of managing dependencies. But you as a library authors can do a couple of things to make it even easier for the end user: Only define minimal targets when the project is included as a subdirectory. Provide minimal zipped archive of sources that users can download instead of the entire repository. Use GitHub actions to automatically create the archive for each release.
