--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.3 【今日阅读】https://marijnhaverbeke.nl/blog/facets.html This post tries to explain CodeMirror's (a code editor library) approach to solving extension problem
+
 7.2 【今日阅读】http://axisofeval.blogspot.com/2011/04/whats-condition-system-and-why-do-you.html What's a condition system and why do you want one?
 
 7.1 【今日阅读】https://webglfundamentals.org/webgl/lessons/webgl-scene-graph.html If you move the earth the moon will move with it. If you move a galaxy all the stars inside will move with it.  Model the rule of "state dependency" (a.k.a Newton's law of motion).
